# pyzfs

./: .buildinfo  .gitignore  CHANGELOG.md  LICENSE.md  README.md  documentation.html  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.py  tutorial.html
.doctrees/: documentation.doctree  environment.pickle  index.doctree  installation.doctree  tutorial.doctree
.doctrees/nbsphinx/tutorials/: diamond_nv_qe_hdf5_correction.ipynb
.doctrees/tutorials/: c3h6_gpaw.doctree  diamond_nv_qe_hdf5_correction.doctree  o2_qbox_xml.doctree  o2_qe_hdf5.doctree
.github/workflows/: ci.yml  doc.yml  documentation.yaml  gh_pages.yml  lint.yml
_sources/: documentation.rst.txt  index.rst.txt  installation.rst.txt  tutorial.rst.txt
doc/: conf.py  index.rst  tutorial.rst
doc/tutorials/: c3h6_gpaw.ipynb  o2_qbox_xml.ipynb
doc/tutorials/diamond_nv_qe_hdf5_correction_data/: C_ONCV_PBE-1.2.upf  (+8 more)
examples/: README.md  zfs_test.py
examples/diamond_nv_qe_hdf5/: C_ONCV_PBE-1.0.upf  N_ONCV_PBE-1.0.upf  N_ONCV_PBE-1.2.upf  pw.in  pw_ref.out  run.sh  zfs_ref.xml
examples/o2_qbox_xml/: O_ONCV_PBE-1.0.xml  o2.xml  qb_ref.out  run.sh  zfs_ref.xml
examples/o2_qe_hdf5/: pw.in  pw_ref.out  pwscf.xml  run.sh  zfs_ref.xml
pyzfs/: run.py
pyzfs/common/: cell.py  counter.py  ft.py  io.py  misc.py  parallel.py  units.py
pyzfs/test/: testparallel.py
pyzfs/zfs/: ddi.py  main.py  prefactor.py  rhog.py
tutorials/: c3h6_gpaw.html  diamond_nv_qe_hdf5_correction.html  o2_qbox_xml.html  o2_qe_hdf5.html  o2_qe_hdf5.ipynb
(+12 files in other folders)
